--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>公式chmlfrp 第三方启动器</title>
+    <title>chmlfrp 第三方启动器</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>公式chmlfrp 第三方启动器</h1>
+        <h1>chmlfrp 第三方启动器</h1>
     </header>
     <nav>
         <ul>
@@ -22,23 +22,32 @@
         <div class="container">
             <div class="card">
                 <img src="https://via.placeholder.com/150" alt="MouHaFrp">
-                <h3>MouHaFrp 内网穿透</h3>
-                <p>配置简单，用户只需按照官方文档进行简单的设置即可实现内网穿透，并且提供免费服务，用户无需支付任何费用即可使用其基本功能。</p>
-                <a href="https://frp.mjh1.cn.cn">官网地址</a>
-                <p>CPU识别码：PACN67CQ</p>
+                <h3>Xingcheng-Chmlfrp-Lanucher</h3>
+                <p>一个用于启动chmlfrp服务的客户端。</p>
+                <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/">官网地址</a>
+                <p>作者：FengXiang2233</p>
             </div>
+            
             <div class="card">
-                <img src="https://via.placeholder.com/150" alt="StarryFrp">
-                <h3>StarryFrp 星空内网穿透</h3>
-                <p>半公益，不限流量，签到白嫖，拥有大量的国内节点，自研后端主控，支持QQ机器人操作。</p>
-                <a href="https://www.starryfrp.top">官网地址</a>
-                <p>CPU识别码：3EHE4XD3</p>
+                <img src="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/raw/refs/heads/master/.github/icon/logo.ico" alt="StarryFrp">
+                <h3>ChmlFrp_Professional_Launcher</h3>
+                <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
+                <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher">官网地址</a>
+                <p>作者：Qianyiaz</p>
+            </div>
+
+            <div class="card">
+                <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/favicon.ico" alt="StarryFrp">
+                <h3>CHMLFRP-UI-Launcher</h3>
+                <p>ChmlFrp第三方Windows图形化客户端，使用 PyQt6 + PY 开发。</p>
+                <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/">官网地址</a>
+                <p>作者：boringstudents</p>
             </div>
             <!-- 添加更多启动器卡片 -->
         </div>
     </main>
     <footer>
-        <p>© 2023 公式chmlfrp 第三方启动器</p>
+        <p>© 2023 chmlfrp 第三方启动器</p>
     </footer>
     <script src="script.js"></script>
 </body>
