--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="https://via.placeholder.com/150" alt="MouHaFrp">
                 <h3>Xingcheng-Chmlfrp-Lanucher</h3>
                 <p>一个用于启动chmlfrp服务的客户端。</p>
-                <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/">官网地址</a>
+                <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/">xcl.chmlfrp.com</a>
                 <p>作者：FengXiang2233</p>
             </div>
             
@@ -32,7 +32,7 @@
                 <img src="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/raw/refs/heads/master/.github/icon/logo.ico" alt="StarryFrp">
                 <h3>ChmlFrp_Professional_Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
-                <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher">官网地址</a>
+                <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher">cpl.chmlfrp.com</a>
                 <p>作者：Qianyiaz</p>
             </div>
 
@@ -40,7 +40,7 @@
                 <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/favicon.ico" alt="StarryFrp">
                 <h3>CHMLFRP-UI-Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 PyQt6 + PY 开发。</p>
-                <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/">官网地址</a>
+                <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/">cul.chmlfrp.com</a>
                 <p>作者：boringstudents</p>
             </div>
             <!-- 添加更多启动器卡片 -->
