--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>启动器列表</h2>
         <div class="container">
             <div class="card">
-                <img src="https://via.placeholder.com/150" alt="MouHaFrp">
+                <img src="http://q1.qlogo.cn/g?b=qq&nk=1281754856&s=5" alt="xcl">
                 <h3>Xingcheng-Chmlfrp-Lanucher</h3>
                 <p>一个用于启动chmlfrp服务的客户端。</p>
                 <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/">xcl.chmlfrp.com</a>
@@ -29,7 +29,7 @@
             </div>
             
             <div class="card">
-                <img src="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/raw/refs/heads/master/.github/icon/logo.ico" alt="StarryFrp">
+                <img src="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/raw/refs/heads/master/.github/icon/logo.ico" alt="cpl">
                 <h3>ChmlFrp_Professional_Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
                 <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher">cpl.chmlfrp.com</a>
@@ -37,7 +37,7 @@
             </div>
 
             <div class="card">
-                <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/favicon.ico" alt="StarryFrp">
+                <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/favicon.ico" alt="cul">
                 <h3>CHMLFRP-UI-Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 PyQt6 + PY 开发。</p>
                 <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/">cul.chmlfrp.com</a>
