--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chmlfrp 第三方启动器</title>
+    <title>ChmlFFrp 第三方启动器</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>chmlfrp 第三方启动器</h1>
+        <h1>ChmlFrp 第三方启动器</h1>
     </header>
     <nav>
         <ul>
@@ -24,7 +24,7 @@
                 <img src="http://q1.qlogo.cn/g?b=qq&nk=1281754856&s=5" alt="xcl">
                 <h3>Xingcheng-Chmlfrp-Lanucher</h3>
                 <p>一个用于启动chmlfrp服务的客户端。</p>
-                <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/">xcl.chmlfrp.com</a>
+                <a href="xcl.chmlfrp.com">官网地址</a>
                 <p>作者：FengXiang2233</p>
             </div>
             
@@ -32,7 +32,7 @@
                 <img src="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/raw/refs/heads/master/.github/icon/logo.ico" alt="cpl">
                 <h3>ChmlFrp_Professional_Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
-                <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher">cpl.chmlfrp.com</a>
+                <a href="cpl.chmlfrp.com">官网地址</a>
                 <p>作者：Qianyiaz</p>
             </div>
 
@@ -40,14 +40,14 @@
                 <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/favicon.ico" alt="cul">
                 <h3>CHMLFRP-UI-Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 PyQt6 + PY 开发。</p>
-                <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/">cul.chmlfrp.com</a>
+                <a href="cul.chmlfrp.com">官网地址</a>
                 <p>作者：boringstudents</p>
             </div>
             <!-- 添加更多启动器卡片 -->
         </div>
     </main>
     <footer>
-        <p>© 2025 chmlfrp 第三方启动器</p>
+        <p>© 2024-2025 Github.com/ChmlFrp</p>
     </footer>
     <script src="script.js"></script>
 </body>
