--- a/index.html
+++ b/index.html
@@ -3,51 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChmlFFrp 第三方启动器</title>
+    <title>chmlfrp 第三方启动器</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://chmlfrp.cn/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>ChmlFrp 第三方启动器</h1>
+        <h1>chmlfrp 第三方启动器</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="#">首页</a></li>
-            <li><a href="#">启动器列表</a></li>
-            <li><a href="#">用户</a></li>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="launchers.html">启动器列表</a></li>
+            <li><a href="users.html">用户</a></li>
         </ul>
     </nav>
     <main>
-        <h2>启动器列表</h2>
-        <div class="container">
-            <div class="card">
-                <img src="http://q1.qlogo.cn/g?b=qq&nk=1281754856&s=5" alt="xcl">
-                <h3>Xingcheng-Chmlfrp-Lanucher</h3>
-                <p>一个用于启动chmlfrp服务的客户端。</p>
-                <a href="xcl.chmlfrp.com">官网地址</a>
-                <p>作者：FengXiang2233</p>
-            </div>
-            
-            <div class="card">
-                <img src="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/raw/refs/heads/master/.github/icon/logo.ico" alt="cpl">
-                <h3>ChmlFrp_Professional_Launcher</h3>
-                <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
-                <a href="cpl.chmlfrp.com">官网地址</a>
-                <p>作者：Qianyiaz</p>
-            </div>
-
-            <div class="card">
-                <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/favicon.ico" alt="cul">
-                <h3>CHMLFRP-UI-Launcher</h3>
-                <p>ChmlFrp第三方Windows图形化客户端，使用 PyQt6 + PY 开发。</p>
-                <a href="cul.chmlfrp.com">官网地址</a>
-                <p>作者：boringstudents</p>
-            </div>
-            <!-- 添加更多启动器卡片 -->
-        </div>
+        <h2>chmlfrp 介绍</h2>
+        <p>chmlfrp 是一个不限流量，无需签到，但存在一些未修复的bug的免费内网穿透工具。</p>
+        <h3>相关链接</h3>
+        <ul>
+            <li><a href="http://v3.chmlfrp.com">ChmlFrp-v3控制面板链接</a></li>
+            <li><a href="https://github.com/TechCat-Team/ChmlFrp-Panel-v3">开源链接</a></li>
+            <li><a href="https://github.com/orgs/TechCat-Team">更多的TechCat开源代码</a></li>
+            <li><a href="https://docs.apiv1.chmlfrp.com">群友的api文档</a></li>
+            <li><a href="https://docs.apiv2.chmlfrp.com">官方api v2文档</a></li>
+            <li><a href="https://culapi.apifox.cn">CUL-api文档</a></li>
+            <li><a href="http://bug.chmlfrp.com">chmlfrp官方bug链接</a></li>
+        </ul>
     </main>
     <footer>
-        <p>© 2024-2025 Github.com/ChmlFrp</p>
+        <p>© 2025 chmlfrp 第三方启动器</p>
     </footer>
     <script src="script.js"></script>
 </body>
