--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="https://github.com/orgs/TechCat-Team">更多的TechCat开源代码</a></li>
             <li><a href="https://docs.apiv1.chmlfrp.com">群友的api文档</a></li>
             <li><a href="https://docs.apiv2.chmlfrp.com">官方api v2文档</a></li>
-            <li><a href="https://culapi.apifox.cn">CUL-api文档</a></li>
+            <li><a href="https://list.chmlfrp.com">chmlfrp.com解析指向</a></li>
             <li><a href="http://bug.chmlfrp.com">chmlfrp官方bug链接</a></li>
         </ul>
     </main>
