--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
         </ul>
     </nav>
     <main>
-        <h2>chmlfrp 介绍</h2>
-        <p>chmlfrp 是一个不限流量，无需签到，但存在一些未修复的bug的免费内网穿透工具。</p>
-        <h3>相关链接</h3>
-        <ul>
-            <li><a href="http://v3.chmlfrp.com">ChmlFrp-v3控制面板链接</a></li>
-            <li><a href="https://github.com/TechCat-Team/ChmlFrp-Panel-v3">开源链接</a></li>
-            <li><a href="https://github.com/orgs/TechCat-Team">更多的TechCat开源代码</a></li>
-            <li><a href="https://docs.apiv1.chmlfrp.com">群友的api文档</a></li>
-            <li><a href="https://docs.apiv2.chmlfrp.com">官方api v2文档</a></li>
-            <li><a href="https://list.chmlfrp.com">chmlfrp.com解析指向</a></li>
-            <li><a href="http://bug.chmlfrp.com">chmlfrp官方bug链接</a></li>
-        </ul>
+        <section class="intro">
+            <h2>chmlfrp 介绍</h2>
+            <p>chmlfrp 是一个不限流量，无需签到，但存在一些未修复的bug的免费内网穿透工具。</p>
+        </section>
+        <section class="links">
+            <h3>相关链接</h3>
+            <ul>
+                <li><a href="http://v3.chmlfrp.com">ChmlFrp-v3控制面板链接</a></li>
+                <li><a href="https://github.com/TechCat-Team/ChmlFrp-Panel-v3">开源链接</a></li>
+                <li><a href="https://github.com/orgs/TechCat-Team">更多的TechCat开源代码</a></li>
+                <li><a href="https://docs.apiv1.chmlfrp.com">群友的api文档</a></li>
+                <li><a href="https://docs.apiv2.chmlfrp.com">官方api v2文档</a></li>
+                <li><a href="https://list.chmlfrp.com">chmlfrp.com解析指向</a></li>
+                <li><a href="http://bug.chmlfrp.com">chmlfrp官方bug链接</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>© 2025 chmlfrp 第三方启动器</p>
