--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <section class="links">
             <h3>相关链接</h3>
             <ul>
-                <li><a href="http://v3.chmlfrp.com">ChmlFrp-v3控制面板链接</a></li>
-                <li><a href="https://github.com/TechCat-Team/ChmlFrp-Panel-v3">开源链接</a></li>
-                <li><a href="https://github.com/orgs/TechCat-Team">更多的TechCat开源代码</a></li>
-                <li><a href="https://docs.apiv1.chmlfrp.com">群友的api文档</a></li>
-                <li><a href="https://docs.apiv2.chmlfrp.com">官方api v2文档</a></li>
-                <li><a href="https://list.chmlfrp.com">chmlfrp.com解析指向</a></li>
-                <li><a href="http://bug.chmlfrp.com">chmlfrp官方bug链接</a></li>
+                <li><a href="http://v3.chmlfrp.com" target="_blank">ChmlFrp-v3控制面板链接</a></li>
+                <li><a href="https://github.com/TechCat-Team/ChmlFrp-Panel-v3" target="_blank">开源链接</a></li>
+                <li><a href="https://github.com/orgs/TechCat-Team" target="_blank">TechCat开源代码链接</a></li>
+                <li><a href="https://docs.apiv1.chmlfrp.com" target="_blank">群友的api文档</a></li>
+                <li><a href="https://docs.apiv2.chmlfrp.com" target="_blank">官方api v2文档</a></li>
+                <li><a href="https://list.chmlfrp.com" target="_blank">chmlfrp.com解析指向</a></li>
+                <li><a href="http://bug.chmlfrp.com" target="_blank">chmlfrp官方bug链接</a></li>
             </ul>
         </section>
     </main>
