--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="links">
             <h3>相关链接</h3>
             <ul>
-                <li><a href="http://v3.chmlfrp.com" target="_blank">ChmlFrp-v3控制面板链接</a></li>
+                <li><a href="https://preview.panel.chmlfrp.cn/" target="_blank">ChmlFrp-v3控制面板链接</a></li>
                 <li><a href="https://github.com/TechCat-Team/ChmlFrp-Panel-v3" target="_blank">开源链接</a></li>
                 <li><a href="https://github.com/orgs/TechCat-Team" target="_blank">TechCat开源代码链接</a></li>
                 <li><a href="https://docs.apiv1.chmlfrp.com" target="_blank">群友的api文档</a></li>
