--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
                 <li><a href="http://bug.chmlfrp.com" target="_blank">chmlfrp官方bug链接</a></li>
             </ul>
         </section>
+        <section class="friend-links">
+            <h3>友链</h3>
+            <ul>
+                <li>
+                    <a href="https://www.chmlfrp.cn" target="_blank">
+                        <img src="https://chmlfrp.cn/favicon.ico" alt="ChmlFrp 官网">
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>© 2025 chmlfrp 第三方启动器</p>
