--- a/launchers.html
+++ b/launchers.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>chmlfrp 第三方启动器</h1>
+        <h1>ChmlFrp 第三方启动器</h1>
     </header>
     <nav>
         <ul>
@@ -48,7 +48,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2025 chmlfrp 第三方启动器</p>
+        <p>© 2025 Github.com/ChmlFrp</p>
     </footer>
     <script src="script.js"></script>
 </body>
