--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chmlfrp 第三方启动器</title>
+    <title>ChmlFrp 第三方启动器</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://chmlfrp.cn/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>chmlfrp 第三方启动器</h1>
+        <h1>ChmlFrp 第三方启动器</h1>
     </header>
     <nav>
         <ul>
@@ -47,7 +47,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 chmlfrp 第三方启动器</p>
+        <p>© 2025 Github.com/ChmlFrp</p>
     </footer>
     <script src="script.js"></script>
 </body>
