--- a/users.html
+++ b/users.html
@@ -42,7 +42,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2025 chmlfrp 第三方启动器</p>
+        <p>© 2025 Github.com/ChmlFrp</p>
     </footer>
     <script src="script.js"></script>
 </body>
