--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
             <ul>
                 <li>
                     <a href="https://www.chmlfrp.cn" target="_blank">
-                        <img src="https://chmlfrp.cn/favicon.ico" alt="ChmlFrp 官网">
+                        <img src="https://chmlfrp.cn/favicon.ico" alt="chmlfrp内网穿透" width="24" height="24">
+                        <span>chmlfrp内网穿透</span>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>© 2025 Github.com/ChmlFrp</p>
+        <p>© 2025 ChmlFrp</p>
     </footer>
     <script src="script.js"></script>
 </body>
