--- a/users.html
+++ b/users.html
@@ -19,27 +19,29 @@
         </ul>
     </nav>
     <main>
-        <h2>用户列表</h2>
-        <div class="container">
-            <div class="card">
-                <img src="https://avatars.githubusercontent.com/u/175490100?v=4" alt="Qianyiaz">
-                <h3>Qianyiaz</h3>
-                <p>ChmlFrp_Professional_Launcher的开发者。</p>
-            </div>
-            
-            <div class="card">
-                <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiang2233">
-                <h3>FengXiang2233</h3>
-                <p>Xingcheng-Chmlfrp-Lanucher的开发者。</p>
-            </div>
+        <section>
+            <h2>用户列表</h2>
+            <div class="user-container">
+                <div class="user-card">
+                    <img src="https://avatars.githubusercontent.com/u/175490100?v=4" alt="Qianyiaz">
+                    <h3>Qianyiaz</h3>
+                    <p>ChmlFrp_Professional_Launcher的开发者。</p>
+                </div>
+                
+                <div class="user-card">
+                    <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiang2233">
+                    <h3>FengXiang2233</h3>
+                    <p>Xingcheng-Chmlfrp-Lanucher的开发者。</p>
+                </div>
 
-            <div class="card">
-                <img src="https://avatars.githubusercontent.com/u/183853199?v=4" alt="boringstudents">
-                <h3>boringstudents</h3>
-                <p>CHMLFRP-UI-Launcher的开发者。</p>
+                <div class="user-card">
+                    <img src="https://avatars.githubusercontent.com/u/183853199?v=4" alt="boringstudents">
+                    <h3>boringstudents</h3>
+                    <p>CHMLFRP-UI-Launcher的开发者。</p>
+                </div>
+                <!-- 添加更多用户卡片 -->
             </div>
-            <!-- 添加更多用户卡片 -->
-        </div>
+        </section>
     </main>
     <footer>
         <p>© 2025 Github.com/ChmlFrp</p>
