--- a/users.html
+++ b/users.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chmlfrp 作者</title>
+    <title>ChmlFrp 开发者</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://chmlfrp.cn/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>chmlfrp 用户</h1>
+        <h1>cChmlFrp 开发者</h1>
     </header>
     <nav>
         <ul>
