--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 ChmlFrp</p>
+        <p>© 2025 Github.com/ChmlFrp</p>
     </footer>
     <script src="script.js"></script>
 </body>
