--- a/launchers.html
+++ b/launchers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChmlFrp 启动器列表</title>
+    <title>chmlfrp 启动器列表</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://chmlfrp.cn/favicon.ico" type="image/x-icon">
 </head>
