--- a/users.html
+++ b/users.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChmlFrp 开发者</title>
+    <title>chmlfrp 用户列表</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://chmlfrp.cn/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>cChmlFrp 开发者</h1>
+        <h1>ChmlFrp 用户列表</h1>
     </header>
     <nav>
         <ul>
@@ -19,29 +19,25 @@
         </ul>
     </nav>
     <main>
-        <section>
-            <h2>用户列表</h2>
-            <div class="user-container">
-                <div class="user-card">
-                    <img src="https://avatars.githubusercontent.com/u/175490100?v=4" alt="Qianyiaz">
-                    <h3>Qianyiaz</h3>
-                    <p>ChmlFrp_Professional_Launcher的开发者。</p>
-                </div>
-                
-                <div class="user-card">
-                    <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiang2233">
-                    <h3>FengXiang2233</h3>
-                    <p>Xingcheng-Chmlfrp-Lanucher的开发者。</p>
-                </div>
-
-                <div class="user-card">
-                    <img src="https://avatars.githubusercontent.com/u/183853199?v=4" alt="boringstudents">
-                    <h3>boringstudents</h3>
-                    <p>CHMLFRP-UI-Launcher的开发者。</p>
-                </div>
-                <!-- 添加更多用户卡片 -->
+        <h2>用户列表</h2>
+        <div class="user-container">
+            <div class="user-card">
+                <img src="http://example.com/user1.jpg" alt="user1">
+                <h3>用户1</h3>
+                <p>用户1的简介。</p>
             </div>
-        </section>
+            <div class="user-card">
+                <img src="http://example.com/user2.jpg" alt="user2">
+                <h3>用户2</h3>
+                <p>用户2的简介。</p>
+            </div>
+            <div class="user-card">
+                <img src="http://example.com/user3.jpg" alt="user3">
+                <h3>用户3</h3>
+                <p>用户3的简介。</p>
+            </div>
+            <!-- 添加更多用户卡片 -->
+        </div>
     </main>
     <footer>
         <p>© 2025 Github.com/ChmlFrp</p>
