--- a/users.html
+++ b/users.html
@@ -22,19 +22,21 @@
         <h2>用户列表</h2>
         <div class="user-container">
             <div class="user-card">
-                <img src="http://example.com/user1.jpg" alt="user1">
-                <h3>用户1</h3>
-                <p>用户1的简介。</p>
+                <img src="https://avatars.githubusercontent.com/u/175490100?v=4" alt="Qianyiaz">
+                <h3>Qianyiaz</h3>
+                <p>ChmlFrp_Professional_Launcher的开发者。</p>
             </div>
+            
             <div class="user-card">
-                <img src="http://example.com/user2.jpg" alt="user2">
-                <h3>用户2</h3>
-                <p>用户2的简介。</p>
+                <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiang2233">
+                <h3>FengXiang2233</h3>
+                <p>Xingcheng-Chmlfrp-Lanucher的开发者。</p>
             </div>
+
             <div class="user-card">
-                <img src="http://example.com/user3.jpg" alt="user3">
-                <h3>用户3</h3>
-                <p>用户3的简介。</p>
+                <img src="https://avatars.githubusercontent.com/u/183853199?v=4" alt="boringstudents">
+                <h3>boringstudents</h3>
+                <p>CHMLFRP-UI-Launcher的开发者。</p>
             </div>
             <!-- 添加更多用户卡片 -->
         </div>
