--- a/launchers.html
+++ b/launchers.html
@@ -45,6 +45,7 @@
                 <p>作者：boringstudents</p>
             </div>
             <!-- 添加更多启动器卡片 -->
+            <div style="height: 100px;"></div> <!-- 留空的部分 -->
         </div>
     </main>
     <footer>
