--- a/users.html
+++ b/users.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>ChmlFrp 用户列表</h1>
+        <h1>ChmlFrp 第三方启动器作者</h1>
     </header>
     <nav>
         <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="launchers.html">启动器列表</a></li>
-            <li><a href="users.html">用户</a></li>
+            <li><a href="users.html">作者</a></li>
         </ul>
     </nav>
     <main>
@@ -38,7 +38,6 @@
                 <h3>boringstudents</h3>
                 <p>CHMLFRP-UI-Launcher的开发者。</p>
             </div>
-            <!-- 添加更多用户卡片 -->
             <div style="height: 100px;"></div> <!-- 留空的部分 -->
         </div>
     </main>
