--- a/launchers.html
+++ b/launchers.html
@@ -13,9 +13,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="launchers.html">启动器列表</a></li>
-            <li><a href="users.html">用户</a></li>
+            <li><a href="index.html" target="_blank">首页</a></li>
+            <li><a href="launchers.html" target="_blank">启动器列表</a></li>
+            <li><a href="users.html" target="_blank">用户</a></li>
         </ul>
     </nav>
     <main>
@@ -25,7 +25,7 @@
                 <img src="http://q1.qlogo.cn/g?b=qq&nk=1281754856&s=640" alt="xcl">
                 <h3>Xingcheng-Chmlfrp-Lanucher</h3>
                 <p>一个用于启动chmlfrp服务的客户端。</p>
-                <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/">xcl.chmlfrp.com</a>
+                <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/" target="_blank">xcl.chmlfrp.com</a>
                 <p>作者：FengXiang2233</p>
             </div>
             
@@ -33,7 +33,7 @@
                 <img src="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/raw/refs/heads/master/.github/icon/logo.ico" alt="cpl">
                 <h3>ChmlFrp_Professional_Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
-                <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher">cpl.chmlfrp.com</a>
+                <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher" target="_blank">cpl.chmlfrp.com</a>
                 <p>作者：Qianyiaz</p>
             </div>
 
@@ -41,7 +41,7 @@
                 <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/favicon.ico" alt="cul">
                 <h3>CHMLFRP-UI-Launcher</h3>
                 <p>ChmlFrp第三方Windows图形化客户端，使用 PyQt6 + PY 开发。</p>
-                <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/">cul.chmlfrp.com</a>
+                <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/" target="_blank">cul.chmlfrp.com</a>
                 <p>作者：boringstudents</p>
             </div>
             <!-- 添加更多启动器卡片 -->
