--- a/launchers.html
+++ b/launchers.html
@@ -27,7 +27,7 @@
                 <p>一个用于启动chmlfrp服务的客户端。</p>
                 <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/" target="_blank">xcl.chmlfrp.com</a>
                 <p>作者：FengXiang2233</p>
-                <p>下载链接：暂无</p>
+                <p>下载链接：枫相是猫娘</p>
             </div>
             
             <div class="card">
@@ -36,7 +36,7 @@
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
                 <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher" target="_blank">cpl.chmlfrp.com</a>
                 <p>作者：Qianyiaz</p>
-                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">CUL</a> 加速下载链接：https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe</p>
+                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">CUL</a> 加速下载链接：<a href="https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe" target="_blank"></a></p>
             </div>
 
             <div class="card">
