--- a/launchers.html
+++ b/launchers.html
@@ -36,7 +36,7 @@
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
                 <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher" target="_blank">cpl.chmlfrp.com</a>
                 <p>作者：Qianyiaz</p>
-                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">CUL</a> 加速下载链接：<a href="https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe" target="_blank"></a></p>
+                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">https://cpl.chmlfrp.com/bin/Lastest.exe</a> 加速下载链接：<a href="https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe" target="_blank"></a></p>
             </div>
 
             <div class="card">
@@ -45,7 +45,7 @@
                 <p>ChmlFrp第三方Windows图形化客户端，使用 PyQt6 + PY 开发。</p>
                 <a href="https://github.com/boringstudents/CHMLFRP-UI-Launcher/" target="_blank">cul.chmlfrp.com</a>
                 <p>作者：boringstudents</p>
-                <p>下载链接：<a href="https://cul.lanzoul.com/b00pzv3oyj" target="_blank">CUL</a> 密码: ff50</p>
+                <p>下载链接：<a href="https://cul.lanzoul.com/b00pzv3oyj" target="_blank">https://cul.lanzoul.com/b00pzv3oyj</a> 密码: ff50</p>
             </div>
             <!-- 添加更多启动器卡片 -->
             <div style="height: 100px;"></div> <!-- 留空的部分 -->
