--- a/launchers.html
+++ b/launchers.html
@@ -36,7 +36,7 @@
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
                 <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher" target="_blank">cpl.chmlfrp.com</a>
                 <p>作者：Qianyiaz</p>
-                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">https://cpl.chmlfrp.com/bin/Lastest.exe</a> 加速下载链接：<a href="https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe" target="_blank"></a></p>
+                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">CUL</a> <button onclick="window.open('https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe', '_blank')">加速下载链接</button></p>
             </div>
 
             <div class="card">
