--- a/launchers.html
+++ b/launchers.html
@@ -13,9 +13,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html" target="_blank">首页</a></li>
-            <li><a href="launchers.html" target="_blank">启动器列表</a></li>
-            <li><a href="users.html" target="_blank">用户</a></li>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="launchers.html">启动器列表</a></li>
+            <li><a href="users.html">用户</a></li>
         </ul>
     </nav>
     <main>
