--- a/launchers.html
+++ b/launchers.html
@@ -27,7 +27,8 @@
                 <p>一个用于启动chmlfrp服务的客户端。</p>
                 <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/" target="_blank">xcl.chmlfrp.com</a>
                 <p>作者：FengXiang2233</p>
-                <p>下载链接：<a href="https://github.com/boringstudents/xcl/releases/download/XCL.II-Alpha.zip" target="_blank">https://github.com/FengXiang2233/download/0.0.1/XCL.II-Alpha.zip</a> <button onclick="window.open('https://ghproxy.net/https://github.com/boringstudents/xcl/releases/download/0.0.1/XCL.II-Alpha.zip', '_blank')">加速下载链接</button></p>
+                <p>下载链接：<a href="https://github.com/boringstudents/xcl/releases/download/XCL.II-Alpha.zip" target="_blank">https://github.com/FengXiang2233/download/XCL.II-Alpha.zip</a></p>
+                <button class="download-btn" onclick="window.open('https://ghproxy.net/https://github.com/boringstudents/xcl/releases/download/0.0.1/XCL.II-Alpha.zip')">加速下载</button>
             </div>
             
             <div class="card">
@@ -36,7 +37,8 @@
                 <p>ChmlFrp第三方Windows图形化客户端，使用 WPF+ C# + .net framework 开发。</p>
                 <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher" target="_blank">cpl.chmlfrp.com</a>
                 <p>作者：Qianyiaz</p>
-                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">https://cpl.chmlfrp.com/bin/Lastest.exe</a> <button onclick="window.open('https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe', '_blank')">加速下载链接</button></p>
+                <p>下载链接：<a href="https://cpl.chmlfrp.com/bin/Lastest.exe" target="_blank">https://cpl.chmlfrp.com/bin/Lastest.exe</a></p>
+                <button class="download-btn" onclick="window.open('https://ghproxy.net/https://github.com/boringstudents/cpl/blob/main/bin/Lastest.exe')">加速下载</button>
             </div>
 
             <div class="card">
