--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li><a href="https://docs.apiv2.chmlfrp.com" target="_blank">官方api v2文档</a></li>
                 <li><a href="https://list.chmlfrp.com" target="_blank">chmlfrp.com解析指向</a></li>
                 <li><a href="http://bug.chmlfrp.com" target="_blank">chmlfrp官方bug链接</a></li>
+                <li><a href="https://cf.milkymay.top/" target="_blank">ChmlFrp镜像站</a></li>
             </ul>
         </section>
         <section class="friend-links">
