--- a/api.html
+++ b/api.html
@@ -248,7 +248,7 @@
             try {
                 document.getElementById('statusBadge').className = 'status-badge loading';
                 
-                const response = await fetch('http://cf-v2.uapis.cn/api/server-status');
+                const response = await fetch('https://cf-v2.uapis.cn/api/server-status');
                 const data = await response.json();
                 
                 // 更新状态指示
