--- a/users.html
+++ b/users.html
@@ -16,6 +16,7 @@
             <li><a href="index.html">首页</a></li>
             <li><a href="launchers.html">启动器列表</a></li>
             <li><a href="users.html">作者</a></li>
+            <li><a href="api.html"target="_blank">api状态</a></li>
         </ul>
     </nav>
     <main>
