--- a/launchers.html
+++ b/launchers.html
@@ -233,6 +233,7 @@
                             }
                             content += `
                                 <h3>版本: ${tagName}</h3>
+                                <p>更新内容: ${apiData.body}</p>
                                 <p>下载链接: <a href="${downloadUrl}" target="_blank">${downloadUrl}</a></p>
                                 <hr>
                             `;
