--- a/launchers.html
+++ b/launchers.html
@@ -119,6 +119,7 @@
             <li><a href="launchers.html">启动器列表</a></li>
             <li><a href="users.html">用户</a></li>
             <li><a href="api.html" target="_blank">API 状态</a></li>
+            <li><a href="blacklist.html"target="_blank">内网穿透联盟黑名单</a></li>
         </ul>
     </nav>
     <main>
