--- a/users.html
+++ b/users.html
@@ -17,6 +17,7 @@
             <li><a href="launchers.html">启动器列表</a></li>
             <li><a href="users.html">作者</a></li>
             <li><a href="api.html"target="_blank">api状态</a></li>
+            <li><a href="blacklist.html"target="_blank">内网穿透联盟黑名单</a></li>
         </ul>
     </nav>
     <main>
