--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="users.html">用户</a></li>
             <li><a href="api.html"target="_blank">api状态</a></li>
             <li><a href="blacklist.html"target="_blank">内网穿透联盟黑名单</a></li>
+            <li><a href="blacklist-l.html"target="_blank">启动器黑名单</a></li>
         </ul>
     </nav>
     <main>
