--- a/users.html
+++ b/users.html
@@ -16,31 +16,32 @@
             <li><a href="index.html">首页</a></li>
             <li><a href="launchers.html">启动器列表</a></li>
             <li><a href="users.html">作者</a></li>
-            <li><a href="api.html"target="_blank">api状态</a></li>
-            <li><a href="blacklist.html"target="_blank">内网穿透联盟黑名单</a></li>
-            <li><a href="blacklist-l.html"target="_blank">启动器黑名单</a></li>
+            <li><a href="api.html" target="_blank">api状态</a></li>
+            <li><a href="blacklist.html" target="_blank">内网穿透联盟黑名单</a></li>
+            <li><a href="blacklist-l.html" target="_blank">启动器黑名单</a></li>
         </ul>
     </nav>
     <main>
         <h2>用户列表</h2>
         <div class="user-container">
-            <div class="user-card">
+            <a href="https://github.com/Qianyiaz" target="_blank" class="user-card">
                 <img src="https://avatars.githubusercontent.com/u/175490100?v=4" alt="Qianyiaz">
                 <h3>Qianyiaz</h3>
                 <p>ChmlFrp_Professional_Launcher的开发者。</p>
-            </div>
+            </a>
             
-            <div class="user-card">
-                <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiang2233">
-                <h3>FengXiang2233</h3>
+            <a href="https://github.com/FengXiangQaQ" target="_blank" class="user-card">
+                <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiangQaQ">
+                <h3>FengXiangQaQ</h3>
                 <p>Xingcheng-Chmlfrp-Lanucher的开发者。</p>
-            </div>
+            </a>
 
-            <div class="user-card">
+            <a href="https://github.com/boringstudents" target="_blank" class="user-card">
                 <img src="https://avatars.githubusercontent.com/u/183853199?v=4" alt="boringstudents">
                 <h3>boringstudents</h3>
                 <p>CHMLFRP-UI-Launcher的开发者。</p>
-            </div>
+            </a>
+
             <div style="height: 100px;"></div> <!-- 留空的部分 -->
         </div>
     </main>
