--- a/launchers.html
+++ b/launchers.html
@@ -117,7 +117,7 @@
         <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="launchers.html">启动器列表</a></li>
-            <li><a href="users.html">用户</a></li>
+            <li><a href="users.html">作者</a></li>
             <li><a href="api.html" target="_blank">API 状态</a></li>
             <li><a href="blacklist.html"target="_blank">内网穿透联盟黑名单</a></li>
             <li><a href="blacklist-l.html"target="_blank">启动器黑名单</a></li>
