--- a/launchers.html
+++ b/launchers.html
@@ -127,12 +127,12 @@
         <h2>启动器列表</h2>
         <div class="container">
             <!-- XCL 卡片 -->
-            <div class="card" data-md-url="https://raw.githubusercontent.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/refs/heads/main/README.md">
+            <div class="card" data-md-url="https://raw.githubusercontent.com/FengXiangqaq/Xingcheng-Chmlfrp-Lanucher/refs/heads/main/README.md">
                 <img src="http://q1.qlogo.cn/g?b=qq&nk=1281754856&s=640" alt="xcl">
                 <h3>Xingcheng-Chmlfrp-Lanucher</h3>
                 <p>一个用于启动 chmlfrp 服务的客户端。</p>
-                <a href="https://github.com/FengXiang2233/Xingcheng-Chmlfrp-Lanucher/" target="_blank">xcl.chmlfrp.com</a>
-                <p>作者：FengXiang2233</p>
+                <a href="https://github.com/FengXiangqaq/Xingcheng-Chmlfrp-Lanucher/" target="_blank">xcl.chmlfrp.com</a>
+                <p>作者：FengXiangqaq</p>
                 <p>版本：2.0</p>
                 <p>下载链接：<a href="https://github.com/boringstudents/xcl/releases/download/XCL.II-Alpha.zip" target="_blank">XCL.II-Alpha.zip</a></p>
                 <button class="download-btn" onclick="window.open('https://ghproxy.net/https://github.com/boringstudents/xcl/releases/download/0.0.1/XCL.II-Alpha.zip')">加速下载</button>
