--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="https://chmlfrp.cn/favicon.ico" alt="ChmlFrp Logo" class="logo-img">
                 </div>
                 <div class="intro-text">
-                    <p>ChmlFrp 是一个不限流量，无需签到，但存在一些未修复的bug的免费内网穿透工具。它可以帮助您轻松地将本地服务暴露到公网，实现远程访问和管理。</p>
+                    <p>ChmlFrp 是一个不限流量，无需流量签到，签到积分换会员，但存在一些未修复的bug的免费内网穿透工具。它可以帮助您轻松地将本地服务暴露到公网，实现远程访问和管理。</p>
                     <div class="intro-features">
                         <div class="feature">
                             <i class="fas fa-infinity"></i>
@@ -38,7 +38,7 @@
                         </div>
                         <div class="feature">
                             <i class="fas fa-check-circle"></i>
-                            <span>无需签到</span>
+                            <span>签到积分换会员</span>
                         </div>
                         <div class="feature">
                             <i class="fas fa-server"></i>
